tests/int/use_command/snapshots/integration__int__use_command__inline__modules_inline_modules__inner_inline_r.snap
---
source: tests/int/use_command/inline.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "inline_modules::inner"
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module

----- stderr -----
