tests/int/use_command/snapshots/integration__int__use_command__inline__modules_inline_modules__inner_inline_r_e.snap
---
source: tests/int/use_command/inline.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "inline_modules::inner"
    - "-r"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module

----- stderr -----
