tests/int/use_command/snapshots/integration__int__use_command__inline__modules_inline_modules__nested_inline_r_e.snap
---
source: tests/int/use_command/inline.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - "inline_modules::nested"
    - "-r"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet

----- stderr -----
